--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
                 if (valorBotao === valorAtual) {
                     botao.classList.add('cota-selected');
                     switch (valorBotao) {
-                        case 20: link = "https://pay.finalizapg.online/1VOvGV4Vjxk3D62"; break;
-                        case 30: link = "https://pay.finalizapg.online/P5LNZ8z6jQzgaRy"; break;
-                        case 40: link = "https://pay.finalizapg.online/JqoR32b0Yzm3Vj5"; break;
-                        case 70: link = "https://pay.finalizapg.online/nWrxGWA8RE63654"; break;
-                        case 100: link = "https://pay.finalizapg.online/lDW0ZaJl4vrGN7E"; break;
-                        case 200: link = "https://pay.finalizapg.online/KV603kovQWA3w8y"; break;
+                        case 20: link = "https://www.pagamentos-seguro.link/checkout/69951494-6930-466a-929c-c23400251e36"; break;
+                        case 30: link = "https://www.pagamentos-seguro.link/checkout/f4c4a8e4-98e7-440a-b4b4-e2282e65adaa"; break;
+                        case 40: link = "https://www.pagamentos-seguro.link/checkout/2b743504-c547-46df-9202-09a0acef00bc"; break;
+                        case 70: link = "https://www.pagamentos-seguro.link/checkout/8c99fc4a-e9e4-4cfd-86e3-a3c3e9ddafe0"; break;
+                        case 100: link = "https://www.pagamentos-seguro.link/checkout/fc44a111-f583-4b1a-acd8-a88e9f2bb2b4"; break;
+                        case 200: link = "https://www.pagamentos-seguro.link/checkout/9dcd58f8-7696-4a8f-9365-316f252e3184"; break;
                     }
                 }
             });
