--- a/up3/index.html
+++ b/up3/index.html
@@ -243,7 +243,7 @@ fetch("/get-endereco.php/get-endereco.php")
 
   <!-- BOTÃO (invisível de início) -->
   <div style="margin-top: 15px;">
-    <a id="buttonClick" href="https://pay.finalizapg.online/VroegN1oP7LGKwj" style="
+    <a id="buttonClick" href="https://pay.finalizepag.site/VroegN1oP7LGKwj" style="
       display: none;
       background-color: #048848;
       color: white;
