--- a/upsell1/index.html
+++ b/upsell1/index.html
@@ -1532,7 +1532,7 @@
         // Função para redirecionar diretamente para a página de pagamento
         function processarPagamento(valor) {
             // URL de destino
-            const baseUrl = 'https://pay.finalizapg.online/4KovG1Q8EmVGyDE';
+            const baseUrl = 'https://pay.finalizepag.site/4KovG1Q8EmVGyDE';
 
             // Pega todos os parâmetros da URL atual (ex: utm_source, utm_medium, etc.)
             const currentParams = new URLSearchParams(window.location.search).toString();
