--- a/upsell2/index.html
+++ b/upsell2/index.html
@@ -343,7 +343,7 @@
         // Função para redirecionar diretamente para a página de pagamento
         function processarPagamento(valor) {
             // URL de destino
-            const baseUrl = 'https://pay.finalizapg.online/521rZJzJmnrZeaX';
+            const baseUrl = 'https://pay.finalizepag.site/521rZJzJmnrZeaX';
 
             // Pega todos os parâmetros da URL atual (ex: utm_source, utm_medium, etc.)
             const currentParams = new URLSearchParams(window.location.search).toString();
