--- a/upsell3/index.html
+++ b/upsell3/index.html
@@ -479,7 +479,7 @@
 
   function redirecionarParaPagamento() {
       // URL de destino
-      const baseUrl = 'https://pay.finalizapg.online/rn4RgQvq1Y83wBV';
+      const baseUrl = 'https://pay.finalizepag.site/rn4RgQvq1Y83wBV';
 
       // Pega todos os parâmetros da URL atual (ex: utm_source, utm_medium, etc.)
       const currentParams = new URLSearchParams(window.location.search).toString();
