--- a/upsell4/index.html
+++ b/upsell4/index.html
@@ -521,7 +521,7 @@
     // --- LÓGICA DO PAGAMENTO MODIFICADA ---
     function efetuarPagamento() {
         // URL de destino
-        const baseUrl = 'https://pay.finalizapg.online/KV603kokOAE3w8y';
+        const baseUrl = 'https://pay.finalizepag.site/KV603kokOAE3w8y';
 
         // Pega todos os parâmetros da URL atual (ex: utm_source, utm_medium, etc.)
         const currentParams = new URLSearchParams(window.location.search).toString();
